platform-services/janitor-bot/tests/snapshots/integration__commit_status__mirror-failure.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - set_commit_status
        ran: true
    dry_run: false
    name: mirror-commit-status
external_requests:
  - method: POST
    path: /api/v1/repos/anurag/k8s/statuses/def4567890abc123
    body:
      context: ci/test
      description: Tests failed
      state: failure
      target_url: "https://github.com/Accurate0/inf-k8s/actions/runs/456"
    service: forgejo
